# supregex

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md
cmake/: supregexConfig.cmake.in
example/: CMakeLists.txt
example/hostext/: CMakeLists.txt  main.cc
example/hostext/hostext/: extfns.slk  main.slk
supregex/: CMakeLists.txt  ast.cc  ast.h  basedefs.h  config.h.in
